--- a/style.css
+++ b/style.css
@@ -140,9 +140,9 @@ body > div {
     flex-basis: calc(50% - 10px);
 }
 
-#the-canvas {
-    border: 1px solid black;
-    direction: ltr;
+.media-content iframe {
+    width: 100%;
+    height: 500px;
 }
 
 button:hover {
