--- a/style.css
+++ b/style.css
@@ -1,17 +1,8 @@
-
-header div {
-    margin-bottom: 0;
-}
-
-body > div {
-    margin-top: 0;
-}
-
 .tag_list {
     display: flex;
 }
 
-.tag_list > li {
+.tag_list>li {
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -19,6 +10,7 @@ body > div {
 .tag {
     background-color: transparent;
     border: solid;
+    border-radius: 0px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom: none;
@@ -26,8 +18,8 @@ body > div {
     padding: 10px;
 }
 
-.content-output,
-.content-input {
+.content_input,
+.content_output {
     width: auto;
     height: 1000px;
     margin: 0;
@@ -36,21 +28,16 @@ body > div {
     transition: max-height 0.3s ease-in-out;
 }
 
-.content-input.open {
+.content_input.open,
+.content_output.open {
     max-height: 2000px;
     border-top: solid;
     border-color: rgba(13, 89, 230, 0.5);
     border-radius: 20px;
 }
 
-.content-output.open {
-    max-height: 2000px;
-    border-top: solid;
-    border-color: rgba(13, 89, 230, 0.5);
-    border-radius: 20px;
-}
 
-.content-box {
+.content_box {
     border: solid 1px;
     border-color: rgba(0, 0, 0, 0.342);
     border-radius: 10px;
@@ -60,7 +47,7 @@ body > div {
     height: 10%;
 }
 
-.custom-file-input {
+.custom_file_input {
     position: absolute;
     top: 0;
     left: 0;
@@ -71,13 +58,13 @@ body > div {
     justify-content: center;
 }
 
-.url-input {
+.url_input {
     height: 3%;
     display: flex;
     align-items: center;
 }
 
-.url-box {
+.url_box {
     width: 100%;
     height: 100%;
     margin: 0;
@@ -86,7 +73,7 @@ body > div {
     justify-content: flex-start;
 }
 
-.url-box > input {
+.url_box>input {
     padding: 0;
     border: none;
     margin: 0 10px;
@@ -94,11 +81,11 @@ body > div {
     width: 100%;
 }
 
-.url-box > input:focus {
+.url_box>input:focus {
     outline: none;
 }
 
-.submit-box {
+.submit_box {
     height: 3%;
 }
 
@@ -116,12 +103,10 @@ body > div {
     align-items: flex-start;
 }
 
-.sel-box {
+.sel_box {
     display: flex;
     flex-basis: calc(33.3333% - 10px);
-    border-radius: 10px;
-    border: solid 1px;
-    border-color: rgba(0, 0, 0, 0.342);
+
     text-align: center;
     text-align-last: center;
     justify-content: center;
@@ -132,18 +117,36 @@ body > div {
     height: auto;
 }
 
-.media-window {
+.media_window {
     display: flex;
 }
 
-.media-content {
+.media_content {
     flex-basis: calc(50% - 10px);
 }
 
-#the-canvas {
+
+
+
+#the_canvas {
     border: 1px solid black;
     direction: ltr;
 }
+
+#page_handle {
+    margin-left: 20px;
+}
+
+
+
+header div {
+    margin-bottom: 0;
+}
+
+body>div {
+    margin-top: 0;
+}
+
 
 button:hover {
     cursor: pointer;
@@ -165,6 +168,14 @@ ul {
     margin: 0;
     padding: 0;
 }
+
+button {
+    border-radius: 10px;
+    border: solid 1px;
+    border-color: rgba(0, 0, 0, 0.342);
+}
+
+
 
 /* input,
 div {
