--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
     height: 3%;
 }
 
-.submit {
+.input_submit {
     height: 100%;
     width: 100%;
     border: none;
@@ -144,16 +144,13 @@
     margin-left: 20px;
 }
 
-
-
 header div {
     margin-bottom: 0;
 }
 
-body>div {
+body > div {
     margin-top: 0;
 }
-
 
 button:hover {
     cursor: pointer;
