--- a/talk.css
+++ b/talk.css
@@ -3,8 +3,6 @@
     display: flex;
     right: 0;
     bottom: 0;
-    width: 30%;
-    height: 60%;
 }
 
 .chat_window {
@@ -12,110 +10,78 @@
     margin-bottom: 15px;
 	background: transparent;
     background: -webkit-linear-gradient(to right, rgb(40, 59, 34), rgb(54, 60, 70), rgb(32, 32, 43));
+    transition: all 0.5s ease-in-out;
 }
-.card{
+
+.card {
     width: 100%;
 	height: 100%;
 	border-radius: 15px !important;
 	background: linear-gradient(to right, rgb(38, 51, 61), rgb(50, 55, 65), rgb(33, 33, 78));
 	background-color: rgba(0,0,0,0.4) !important;
 }
-.contacts_body{
-	padding:  0.75rem 0 !important;
-	overflow-y: auto;
-	white-space: nowrap;
-}
-.msg_card_body{
-	overflow-y: auto;
-}
-.card-header{
+
+.card-header {
 	border-radius: 15px 15px 0 0 !important;
 	border-bottom: 0 !important;
 }
-.card-footer{
+
+.card-footer {
 border-radius: 0 0 15px 15px !important;
 	border-top: 0 !important;
 }
-.search{
-	border-radius: 15px 0 0 15px !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color:white !important;
-}
-.search:focus{
-	box-shadow:none !important;
-    outline:0px !important;
-}
-.type_msg{
+
+.type_msg {
 	background-color: rgba(0,0,0,0.3) !important;
 	border:0 !important;
 	color:white !important;
 	height: 60px !important;
 	overflow-y: auto;
 }
-.type_msg:focus{
+
+.type_msg:focus {
 	box-shadow:none !important;
     outline:0px !important;
 }
-.attach_btn{
-	border-radius: 15px 0 0 15px !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-.input-group-append {
+
+.input-group-append  {
     margin: 0;
 }
 
-.send_btn{
+.send_btn {
 	border-radius: 0 15px 15px 0 !important;
 	background-color: rgba(0,0,0,0.3) !important;
 	border:0 !important;
 	color: white !important;
 	cursor: pointer;
 }
-.search_btn{
-	border-radius: 0 15px 15px 0 !important;
-	background-color: rgba(0,0,0,0.3) !important;
-	border:0 !important;
-	color: white !important;
-	cursor: pointer;
-}
-.contacts{
-	list-style: none;
-	padding: 0;
-}
-.contacts li{
-	width: 100% !important;
-	padding: 5px 10px;
-	margin-bottom: 15px !important;
-}
-.active{
-	background-color: rgba(0,0,0,0.3);
-}
-.user_img{
+
+.user_img {
 	height: 70px;
 	width: 70px;
 	border:1.5px solid #f5f6fa;
 
 }
-.user_img_msg{
+
+.user_img_msg {
 	height: 40px;
 	width: 40px;
 	border:1.5px solid #f5f6fa;
 
 }
-.img_cont{
+
+.img_cont {
 	position: relative;
 	height: 70px;
 	width: 70px;
 }
-.img_cont_msg{
+
+.img_cont_msg {
 	height: 40px;
 	width: 40px;
 }
-.online_icon{
+
+.online_icon {
 	position: absolute;
 	height: 15px;
 	width:15px;
@@ -125,33 +91,24 @@ border-radius: 0 0 15px 15px !important;
 	right: 0.4em;
 	border:1.5px solid white;
 }
-.offline{
-	background-color: #c23616 !important;
-}
-.user_info{
+
+.user_info {
 	margin-top: auto;
 	margin-bottom: auto;
 	margin-left: 15px;
 }
-.user_info span{
+
+.user_info span {
 	font-size: 20px;
 	color: white;
 }
-.user_info p{
+
+.user_info p {
 	font-size: 10px;
 	color: rgba(255,255,255,0.6);
 }
-.video_cam{
-	margin-left: 50px;
-	margin-top: 5px;
-}
-.video_cam span{
-	color: white;
-	font-size: 20px;
-	cursor: pointer;
-	margin-right: 20px;
-}
-.msg_cotainer{
+
+.msg_cotainer {
 	margin-top: auto;
 	margin-bottom: auto;
 	margin-left: 10px;
@@ -160,7 +117,8 @@ border-radius: 0 0 15px 15px !important;
 	padding: 10px;
 	position: relative;
 }
-.msg_cotainer_send{
+
+.msg_cotainer_send {
 	margin-top: auto;
 	margin-bottom: auto;
 	margin-right: 10px;
@@ -169,61 +127,44 @@ border-radius: 0 0 15px 15px !important;
 	padding: 10px;
 	position: relative;
 }
-.msg_time{
+
+.msg_time {
 	position: absolute;
 	left: 0;
 	bottom: -15px;
 	color: rgba(255,255,255,0.5);
 	font-size: 10px;
 }
-.msg_time_send{
+
+.msg_time_send {
 	position: absolute;
 	right:0;
 	bottom: -15px;
 	color: rgba(255,255,255,0.5);
 	font-size: 10px;
 }
-.msg_head{
+
+.msg_head {
 	position: relative;
 }
-#action_menu_btn{
-	position: absolute;
-	right: 10px;
-	top: 10px;
-	color: white;
-	cursor: pointer;
-	font-size: 20px;
-}
-.action_menu{
-	z-index: 1;
-	position: absolute;
-	padding: 15px 0;
-	background-color: rgba(0,0,0,0.5);
-	color: white;
-	border-radius: 15px;
-	top: 30px;
-	right: 15px;
-	display: none;
-}
-.action_menu ul{
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-.action_menu ul li{
-	width: 100%;
-	padding: 10px 15px;
-	margin-bottom: 5px;
-}
-.action_menu ul li i{
-	padding-right: 10px;
-}
-.action_menu ul li:hover{
-	cursor: pointer;
-	background-color: rgba(0,0,0,0.2);
-}
-@media(max-width: 576px){
-	.contacts_card{
+
+@media(max-width: 576px) {
+	.contacts_card {
 	margin-bottom: 15px !important;
+    }
 }
-}
+
+/* .chat_window::before {
+    content: "";
+    background-image: url(https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png);
+    width: 70px;
+    height: 70px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    border-radius: 50%;
+    border: 1.5px solid black;
+    position: absolute;
+    bottom: 15px;
+    right: 20px;
+    margin: 10px;
+} */
